[gd_scene load_steps=20 format=2]

[ext_resource path="res://assets/shaders/Checkerboard_3D.shader" type="Shader" id=1]
[ext_resource path="res://assets/graphics/menus/fading_circle.png" type="Texture" id=2]
[ext_resource path="res://assets/graphics/menus/checkerboard_pattern.png" type="Texture" id=3]
[ext_resource path="res://prototypes/menus/main_menu/Credits_GUI.tscn" type="PackedScene" id=4]
[ext_resource path="res://scripts/menus/main_menu/Credits_Menu.gd" type="Script" id=5]

[sub_resource type="ShaderMaterial" id=1]
shader = ExtResource( 1 )
shader_param/mask_color_1 = Color( 1, 1, 1, 1 )
shader_param/desired_color_1 = Color( 0, 0.741176, 1, 1 )
shader_param/mask_color_2 = Color( 0, 0, 0, 1 )
shader_param/desired_color_2 = Color( 0, 0.6, 1, 1 )
shader_param/scroll_speed = Vector2( 0.03, 0.03 )
shader_param/tex = ExtResource( 3 )

[sub_resource type="SphereMesh" id=2]

[sub_resource type="ViewportTexture" id=3]
viewport_path = NodePath("Credits_VP")

[sub_resource type="BoxShape" id=4]
extents = Vector3( 0.118, 0.167, 0.01 )

[sub_resource type="Animation" id=5]
resource_name = "Hover"
length = 0.1
tracks/0/type = "animation"
tracks/0/path = NodePath("../Credits_VP/Credits_GUI/Prev_Btn/AnimationPlayer")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"clips": PoolStringArray( "Hover" ),
"times": PoolRealArray( 0 )
}

[sub_resource type="Animation" id=6]
resource_name = "Normal"
length = 0.1
tracks/0/type = "animation"
tracks/0/path = NodePath("../Credits_VP/Credits_GUI/Prev_Btn/AnimationPlayer")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"clips": PoolStringArray( "Normal" ),
"times": PoolRealArray( 0 )
}

[sub_resource type="Animation" id=7]
resource_name = "Selected"
length = 0.5
tracks/0/type = "animation"
tracks/0/path = NodePath("../Credits_VP/Credits_GUI/Prev_Btn/AnimationPlayer")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"clips": PoolStringArray( "Selected" ),
"times": PoolRealArray( 0 )
}

[sub_resource type="Animation" id=8]
resource_name = "Hover"
length = 0.1
tracks/0/type = "animation"
tracks/0/path = NodePath("../Credits_VP/Credits_GUI/Next_Btn/AnimationPlayer")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"clips": PoolStringArray( "Hover" ),
"times": PoolRealArray( 0 )
}

[sub_resource type="Animation" id=9]
resource_name = "Normal"
length = 0.1
tracks/0/type = "animation"
tracks/0/path = NodePath("../Credits_VP/Credits_GUI/Next_Btn/AnimationPlayer")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"clips": PoolStringArray( "Normal" ),
"times": PoolRealArray( 0 )
}

[sub_resource type="Animation" id=10]
resource_name = "Selected"
length = 0.5
tracks/0/type = "animation"
tracks/0/path = NodePath("../Credits_VP/Credits_GUI/Next_Btn/AnimationPlayer")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"clips": PoolStringArray( "Selected" ),
"times": PoolRealArray( 0 )
}

[sub_resource type="BoxShape" id=11]
extents = Vector3( 0.12, 0.119, 0.01 )

[sub_resource type="Animation" id=12]
resource_name = "Hover"
length = 0.1
tracks/0/type = "animation"
tracks/0/path = NodePath("../Credits_VP/Credits_GUI/Back/AnimationPlayer")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"clips": PoolStringArray( "Hover" ),
"times": PoolRealArray( 0 )
}

[sub_resource type="Animation" id=13]
resource_name = "Normal"
length = 0.1
tracks/0/type = "animation"
tracks/0/path = NodePath("../Credits_VP/Credits_GUI/Back/AnimationPlayer")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"clips": PoolStringArray( "Normal" ),
"times": PoolRealArray( 0 )
}

[sub_resource type="Animation" id=14]
resource_name = "Selected"
length = 0.5
tracks/0/type = "animation"
tracks/0/path = NodePath("../Credits_VP/Credits_GUI/Back/AnimationPlayer")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"clips": PoolStringArray( "Selected" ),
"times": PoolRealArray( 0 )
}

[node name="Credits_Menu" type="Spatial"]
script = ExtResource( 5 )

[node name="Abstract_Sky" type="MeshInstance" parent="."]
transform = Transform( 20, 0, 0, 0, 20, 0, 0, 0, 20, 0, 0, 0 )
material_override = SubResource( 1 )
mesh = SubResource( 2 )
material/0 = null

[node name="Floor" type="Sprite3D" parent="."]
transform = Transform( 0.25, 0, 0, 0, 1, 0, 0, 0, 0.25, 0, 0, 0 )
modulate = Color( 0.156863, 0.352941, 0.945098, 1 )
axis = 1
texture = ExtResource( 2 )

[node name="Credits_VP" type="Viewport" parent="."]
size = Vector2( 1280, 720 )
transparent_bg = true
render_target_v_flip = true

[node name="Credits_GUI" parent="Credits_VP" instance=ExtResource( 4 )]

[node name="Credits" type="Sprite3D" parent="."]
transform = Transform( 0.25, 0, 0, 0, 0.25, 0, 0, 0, 1, 0, 1.25, -2 )
texture = SubResource( 3 )

[node name="Prev_Credits" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -1.40325, 1.25, -2 )

[node name="Area" type="Area" parent="Prev_Credits"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.000305176, 0, 0 )

[node name="CollisionShape" type="CollisionShape" parent="Prev_Credits/Area"]
shape = SubResource( 4 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Prev_Credits"]
anims/Hover = SubResource( 5 )
anims/Normal = SubResource( 6 )
anims/Selected = SubResource( 7 )

[node name="Next_Credits" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1.40325, 1.25, -2 )

[node name="Area" type="Area" parent="Next_Credits"]

[node name="CollisionShape" type="CollisionShape" parent="Next_Credits/Area"]
shape = SubResource( 4 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Next_Credits"]
anims/Hover = SubResource( 8 )
anims/Normal = SubResource( 9 )
anims/Selected = SubResource( 10 )

[node name="Back" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -1.47325, 2.0225, -2 )

[node name="Area" type="Area" parent="Back"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.000199795, 8.24928e-05, 0 )

[node name="CollisionShape" type="CollisionShape" parent="Back/Area"]
shape = SubResource( 11 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Back"]
anims/Hover = SubResource( 12 )
anims/Normal = SubResource( 13 )
anims/Selected = SubResource( 14 )

[node name="Camera" type="Camera" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0 )

[editable path="Credits_VP/Credits_GUI"]
[editable path="Credits_VP/Credits_GUI/Prev_Btn"]
[editable path="Credits_VP/Credits_GUI/Next_Btn"]
[editable path="Credits_VP/Credits_GUI/Back"]
